# otus_cpp_allocator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  linked_list.cpp  linked_list.h  main.cpp  my_allocator.cpp  my_allocator.h  pool_allocator.cpp  pool_allocator.h
.github/workflows/: release.yml
for_build/: CMakeCache.txt
include/: allocator.h  linked_list.h  pool_allocator.h  stack_linked_list.h
src/: linked_list.cpp  pool_allocator.cpp  stack_linked_list.cpp
